refactor: reorganize UI tests
It is more consistent and nicer to work with

--- a/test-utils/ui/reports/assets/report.html
+++ b/test-utils/ui/reports/assets/report.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="code-example.css" ss:inline>
 <link rel="stylesheet" href="doc.css" ss:inline>
-<link rel="stylesheet" href="../assets/report.css" ss:inline/>
+<link rel="stylesheet" href="../report.css" ss:inline/>
 
 <script src="../assets/report.js" defer></script>
 <div class="container">
@@ -16,11 +16,11 @@
             <!-- Comparison Slider - this div contain the slider with the individual images captions -->
             <div class="comparison-slider">
                 <div class="overlay"><strong>Expected</strong> image.</div>
-            <img src="expected.png" alt="expected screenshot">
+            <img src="expected-screenshot-1.png" alt="expected screenshot">
             <!-- Div containing the image layed out on top from the left -->
             <div class="resize">
                 <div class="overlay"> <strong>Result</strong> image.</div>
-                <img src="result.png" alt="result screenshot">
+                <img src="result-screenshot-1.png" alt="result screenshot">
             </div>
             <!-- Divider where user will interact with the slider -->
             <div class="divider"></div>
@@ -30,7 +30,7 @@
         </section>
 
         <section>
-            <img class="diff-image" src="diff.png" alt="diffence image">
+            <img class="diff-image" src="diff-screenshot-1.png" alt="diffence image">
             <div class="caption">Difference image</div>
         </section>
 
